--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/jesusvasquez/dev/reactifydjango/Reactify-Django/src/bin/python3"
+    "python.pythonPath": "src/bin/python"
 }
