--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,24 @@
+appdirs==1.4.3
+astroid==2.3.3
+certifi==2020.4.5.1
+distlib==0.3.0
+dj-database-url==0.5.0
 Django==2.0.6
 django-cors-headers==2.2.0
+django-filter==2.2.0
 djangorestframework==3.8.2
+filelock==3.0.12
+gunicorn==20.0.4
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+Pillow==7.1.2
+pipenv==2018.11.26
+psycopg2-binary==2.8.5
+pylint==2.4.4
 pytz==2018.4
+six==1.14.0
+virtualenv==20.0.18
+virtualenv-clone==0.5.4
+whitenoise==5.0.1
+wrapt==1.11.2
