--- a/package.json
+++ b/package.json
@@ -30,5 +30,7 @@
     "copy-build-js": "copyfiles -f 'build/static/js/*.js' '../staticfiles/js/'",
     "copy-build-css": "copyfiles -f 'build/static/css/*.css' '../staticfiles/css/'",
     "collectstatic": "python ../manage.py collectstatic --no-input"
-  }
+  },
+
+  "engines": {"node" : "12.14.1"}
 }
